--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_hitungFragment_to_aboutFragment"
             app:destination="@id/aboutFragment" />
+        <action
+            android:id="@+id/action_hitungFragment_to_historiFragment"
+            app:destination="@id/historiFragment" />
     </fragment>
     <fragment
         android:id="@+id/saranFragment"
@@ -30,4 +33,8 @@
         android:id="@+id/aboutFragment"
         android:name="org.d3if0066.hitungbmi.ui.AboutFragment"
         android:label="AboutFragment" />
+    <fragment
+        android:id="@+id/historiFragment"
+        android:name="org.d3if0066.hitungbmi.ui.histori.HistoriFragment"
+        android:label="HistoriFragment" />
 </navigation>
